--- a/pepeizqs deals web/Pages/Componentes/Secciones/Patreon.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Patreon.razor
@@ -30,7 +30,7 @@
 		@Herramientas.Idiomas.BuscarTexto(idioma, "String2", "Patreon")
 	</div>
 
-	<div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px;">
+	<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 20px;">
 		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
 			<div>
 				@Herramientas.Idiomas.BuscarTexto(idioma, "String3", "Patreon")
