--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -22,13 +22,11 @@
 
 <style>
 	.bundles-grid {
-		grid-template-columns: 1fr 1fr 1fr;
 		gap: 40px;
 	}
 
 	@@media (max-width: 800px) {
 		.bundles-grid {
-			grid-template-columns: 1fr 1fr;
 			gap: 20px;
 		}
 	}
@@ -44,7 +42,7 @@
 
 		<hr>
 
-		<div class="bundles-grid" style="display: grid; justify-items: center; margin-top: 40px; margin-bottom: 70px;">
+		<div class="bundles-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); gap: 40px; justify-items: center; margin-bottom: 70px;">
 			@foreach (var bundle in bundlesActuales)
 			{
 				<button @onclick="@(e => SeleccionarBundle(e, bundle))" class="boton-pequeño" style="padding: 0px;">
