--- a/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
@@ -22,7 +22,6 @@
 
 <style>
     .suscripciones-grid {
-        grid-template-columns: 1fr 1fr 1fr;
         gap: 30px;
     }
 
@@ -33,7 +32,6 @@
 
     @@media (max-width: 800px) {
         .suscripciones-grid {
-            grid-template-columns: 1fr 1fr;
             gap: 15px;
         }
 
@@ -65,7 +63,7 @@
                 </div>
             </div>
 
-            <div class="suscripciones-grid" style="display: grid; margin-top: 30px;">
+            <div class="suscripciones-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); gap: 40px; margin-top: 30px;">
                 @foreach (var suscripcionActual in suscripcionesActuales)
                 {
                     <button @onclick="@(e => SuscripcionAbrir(e, suscripcionActual))" class="boton-pequeño suscripcion-grid" style="display: flex; flex-direction: column; align-items: center;">
@@ -249,7 +247,7 @@ else
             </button>
 
             <div style="display: flex; align-items: center; gap: 30px; width: 100%;">
-                <div style="max-width: 150px; height: 40px;">
+                <div style="max-width: 150px;">
                     <img src="@suscripcionSeleccionadaTipo.ImagenLogo" alt="@suscripcionSeleccionadaTipo.Nombre" style="width: 100%; height: 100%; object-fit: contain; object-position: 0 50%;" />
                 </div>
 
@@ -341,32 +339,28 @@ else
             <input type="text" @onchange="(e => TextoCambiaBuscador(e))" class="entrada-texto" style="min-width: 50%;" placeholder="@Herramientas.Idiomas.BuscarTexto(idioma, "String9", "Publisher")" />
         </div>
 
-        <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 10px 30px; display: flex; flex-direction: column; gap: 20px;">
-            <Virtualize Context="juego" Items="suscripcionSeleccionadaJuegosMostrar" ItemSize="107">
-                <ItemContent>
-                    @{
-                        string enlace = Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo, usuarioPatreon);
+        <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 30px;">
+            @foreach (var juego in suscripcionSeleccionadaJuegosMostrar)
+            {
+                string enlace = Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo, usuarioPatreon);
 
-                        if (suscripcionSeleccionadaTipo.UsuarioEnlacesEspecificos == false)
-                        {
-                            enlace = Herramientas.EnlaceAcortador.Generar(suscripcionSeleccionadaTipo.Enlace, suscripcionSeleccionadaTipo.Id, usuarioPatreon);
-                        }
-                    }
+                if (suscripcionSeleccionadaTipo.UsuarioEnlacesEspecificos == false)
+                {
+                    enlace = Herramientas.EnlaceAcortador.Generar(suscripcionSeleccionadaTipo.Enlace, suscripcionSeleccionadaTipo.Id, usuarioPatreon);
+                }
 
-                    <a href="@enlace" class="boton-pequeño" target="_blank" style="font-size: 16px; cursor: pointer; color: var(--colorTexto); text-decoration: none; padding: 0px;">
-                        <div class="boton-expandir" style="display: flex; align-items: center; gap: 20px;">
-                            <div>
-                                <img src="@juego.Juego.Imagenes.Header_460x215" style="max-width: 230px; max-height: 107px;" alt="@juego.Nombre" />
-                            </div>
-
-                            <div style="width: 100%;">
-                                <div>@juego.Juego.Nombre</div>
-                                <div style="margin-top: 10px;"><img src="@JuegoDRM2.SacarImagen(juego.DRM)" style="max-width: 20px; max-height: 20px;" /></div>
-                            </div>
+                <a href="@enlace" class="boton-pequeño" target="_blank" style="font-size: 16px; cursor: pointer; color: var(--colorTexto); text-decoration: none; padding: 0px; max-width: 235px;">
+                    <div class="boton-expandir" style="display: flex; flex-direction: column;">
+                        <div>
+                            <img src="@juego.Juego.Imagenes.Library_600x900" style="max-width: 100%; max-height: 100%;" alt="@juego.Nombre" />
                         </div>
-                    </a>
-                </ItemContent>
-            </Virtualize>
+
+                        <div style="width: 100%; text-align: right; padding: 10px;">
+                            <img src="@JuegoDRM2.SacarImagen(juego.DRM)" style="max-width: 20px; max-height: 20px;" />
+                        </div>
+                    </div>
+                </a>
+            }
         </div>       
     </div>
 }
