--- a/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
@@ -158,7 +158,7 @@
 				{
 					<Virtualize Context="juego" Items="deseadosMostrar" ItemSize="alturaFila">
 						<ItemContent>
-							<div style="margin: 20px 0px;">
+							<div style="margin: 20px 0px; display: flex; align-items: center; position: relative;">
 								<a class="boton-pequeño" style="padding: 2px;" href="@Herramientas.EnlaceAcortador.Generar(juego.Precio.Enlace, juego.Precio.Tienda, usuarioPatreon)" target="_blank">
 									<div style="display: flex; align-items: stretch; justify-content: center; flex-direction: row;">
 										<div class="deseado-imagen">
@@ -231,21 +231,12 @@
 									</div>
 								</a>
 
-								@if (usuario.WishlistOption2 == true)
+								@if (string.IsNullOrEmpty(otroUsuario) == true && juego.Importado == false)
 								{
-									<div style="background-color: var(--fondoMinimo); border-left: 1px solid var(--fondoBotonPequeño); border-right: 1px solid var(--fondoBotonPequeño); border-bottom: 1px solid var(--fondoBotonPequeño); padding: 5px 10px; display: flex; align-items: center; gap: 10px;">
-										@if (juego.Importado == false)
-										{
-											<button @onclick="@(e => QuitarJuego(e, juego.Id, juego.DRM))" class="boton-pequeño" style="width: fit-content; font-size: 14px;">
-												@Herramientas.Idiomas.BuscarTexto(idioma, "String22", "Wishlist")
-											</button>
-										}
-
-										<a class="boton-pequeño" href="/game/@juego.Id.ToString()/@Herramientas.EnlaceAdaptador.Nombre(juego.Nombre)/" style="width: fit-content; font-size: 14px;">
-											@Herramientas.Idiomas.BuscarTexto(idioma, "String23", "Wishlist")
-										</a>
-
-										<div style="width: 100%; font-size: 14px; text-align: right">@Herramientas.Idiomas.BuscarTexto(idioma, "String15", "Wishlist"): @juego.CantidadBundles.ToString() • @Herramientas.Idiomas.BuscarTexto(idioma, "String16", "Wishlist"): @juego.CantidadGratis • @Herramientas.Idiomas.BuscarTexto(idioma, "String17", "Wishlist"): @juego.CantidadSuscripciones</div>
+									<div style="background-color: transparent; padding: 5px 10px; display: flex; align-items: center; gap: 10px; right: -100px; position: absolute;">
+										<button @onclick="@(e => QuitarJuego(e, juego.Id, juego.DRM))" style="width: fit-content; font-size: 14px; color: var(--colorEnlace); background: transparent; border: 0px; text-decoration: none; margin-left: auto;">
+											@Herramientas.Idiomas.BuscarTexto(idioma, "String22", "Wishlist")
+										</button>
 									</div>
 								}
 							</div>
@@ -288,22 +279,6 @@
 
 										<div style="font-size: 14px;">
 											@Herramientas.Idiomas.BuscarTexto(idioma, "String28", "Wishlist")
-										</div>
-									</div>
-								</div>
-
-								<div style="padding: 30px; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); display: flex; align-items: center; gap: 20px;">
-									<div class="checkbox-caja">
-										<input type="checkbox" class="checkbox-interior" checked="@estadoEnseñarHistorial" @onchange="EnseñarHistorial">
-									</div>
-
-									<div style="display: flex; flex-direction: column; gap: 10px;">
-										<div>
-											@Herramientas.Idiomas.BuscarTexto(idioma, "String18", "Wishlist")
-										</div>
-
-										<div style="font-size: 14px;">
-											@Herramientas.Idiomas.BuscarTexto(idioma, "String29", "Wishlist")
 										</div>
 									</div>
 								</div>
@@ -431,7 +406,7 @@
 	private int cantidadMinimos = 0;
 	private string ordenamientoElegido = string.Empty;
 
-	private int alturaFila = 88;
+	private int alturaFila = 82;
 
 	private string textoBuscador { get; set; }
 
@@ -470,17 +445,6 @@
 			else
 			{
 				estadoEnseñarSoloMinimos = null;
-			}
-
-			if (usuario.WishlistOption2 == true)
-			{
-				estadoEnseñarHistorial = "checked";
-				alturaFila = 108;
-			}
-			else
-			{
-				estadoEnseñarHistorial = null;
-				alturaFila = 78;
 			}
 
 			if (usuario.WishlistOption3 == null)
@@ -1188,35 +1152,6 @@
 			{
 				usuario.WishlistOption1 = true;
 				estadoEnseñarSoloMinimos = "checked";
-			}
-
-			try
-			{
-				await UserManager.UpdateAsync(usuario);
-			}
-			catch { }
-
-			ElegirOrdenamiento();
-		}
-	}
-
-	private string estadoEnseñarHistorial = null;
-
-	private async void EnseñarHistorial()
-	{
-		if (usuario != null)
-		{
-			if (usuario.WishlistOption2 == true)
-			{
-				usuario.WishlistOption2 = false;
-				estadoEnseñarHistorial = null;
-				alturaFila = 88;
-			}
-			else
-			{
-				usuario.WishlistOption2 = true;
-				estadoEnseñarHistorial = "checked";
-				alturaFila = 114;
 			}
 
 			try
