--- a/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Maestro.razor
@@ -68,7 +68,7 @@
                 <button class="boton-pestañas" @onclick="(e => MostrarBundles(e))" style="@estiloBundles;">Bundles</button>
                 <button class="boton-pestañas" @onclick="(e => MostrarGratis(e))" style="@estiloGratis;">Gratis</button>
                 <button class="boton-pestañas" @onclick="(e => MostrarSuscripciones(e))" style="@estiloSuscripciones;">Suscripciones</button>
-                <button class="boton-pestañas" @onclick="(e => MostrarRecompensas(e))" style="@estiloRecompensas;">Recompensas</button>
+                <button class="boton-pestañas" @onclick="(e => MostrarRecompensas(e))" style="@estiloRecompensas;">Tienda Patreon</button>
             </div>
         </div>
 
