--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -200,7 +200,7 @@
             {
                 <div style="padding: 20px; background-color: var(--fondoMinimo); font-size: 17px;">
                     <div class="cuerpo-ancho" style="display: flex; align-items: center; flex-direction: initial; gap: 30px;">
-                        <label style="font-size: 14px; text-align: center;">@Herramientas.Calculadora.DiferenciaTiempo(aviso.Fecha, idioma)</label>
+                        <label style="font-size: 14px; text-align: center; width: fit-content;">@Herramientas.Calculadora.DiferenciaTiempo(aviso.Fecha, idioma)</label>
 
                         @{
                             bool hayEnlace = false;
